--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -8,6 +8,15 @@
    "source": [
     "kjkjksskdkd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sddsdsd"
+   ]
   }
  ],
  "metadata": {
