--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kjkjksskdkd"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Workflow of Logistic Regression model\n",
+    "\n",
+    "Step 1: Set learning rate and number of iterations; initiate random weight and bias value.\n",
+    "\n",
+    "Step 2: Build Logistic Regression function (sigmoid function).\n",
+    "\n",
+    "Step 3: Update the parameters using Gradient Descent.\n",
+    "Finally, we will get the best model (best weight and bias value) as it has minimum cost function.\n",
+    "\n",
+    "Step 4: Build the Predict funtion to determine the class of a data point."
    ]
   },
   {
@@ -15,13 +31,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sddsdsd"
+    "class Logistic_Regression():\n",
+    "\n",
+    "    def __init__():\n",
+    "\n",
+    "    def fit():\n",
+    "\n",
+    "    def update_weights():\n",
+    "\n",
+    "    def predict():"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
