--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,21 @@
    "source": [
     "class Logistic_Regression():\n",
     "\n",
-    "    def __init__():\n",
+    "    # initializing function and declaring learning rate and number of iterations (hyperparameters)\n",
+    "    def __init__(self, learning_rate, no_of_iterations):\n",
     "\n",
-    "    def fit():\n",
+    "        self.learning_rate = learning_rate\n",
+    "        self.no_of_iterations = no_of_iterations\n",
     "\n",
-    "    def update_weights():\n",
+    "    # fit function to train the model with some dataset\n",
+    "    def fit(self, X, Y):\n",
     "\n",
-    "    def predict():"
+    "        #  number of data points in the dataset\n",
+    "        self.m, self.n = X.shape\n",
+    "\n",
+    "    def update_weights(self, ):\n",
+    "\n",
+    "    def predict(self, ):"
    ]
   }
  ],
