--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -42,8 +42,10 @@
     "    # fit function to train the model with some dataset\n",
     "    def fit(self, X, Y):\n",
     "\n",
-    "        #  number of data points in the dataset\n",
+    "        # number of data points in the dataset (number of rows) --> m\n",
+    "        # number of input features in the dataset (number of columns) --> n\n",
     "        self.m, self.n = X.shape\n",
+    "        \n",
     "\n",
     "    def update_weights(self, ):\n",
     "\n",
