--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -45,7 +45,16 @@
     "        # number of data points in the dataset (number of rows) --> m\n",
     "        # number of input features in the dataset (number of columns) --> n\n",
     "        self.m, self.n = X.shape\n",
+    "\n",
+    "        # initiating weight and bias value\n",
+    "        self.w = np.zeros(self.n)        # gives an array of size n\n",
+    "        self.b = 0\n",
+    "\n",
+    "        self.X = X\n",
+    "        self.Y = Y\n",
+    "\n",
     "        \n",
+    "\n",
     "\n",
     "    def update_weights(self, ):\n",
     "\n",
