--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -53,12 +53,24 @@
     "        self.X = X\n",
     "        self.Y = Y\n",
     "\n",
+    "        # implementing gradient descent for optimisation\n",
+    "        for i in range(no_of_iterations):\n",
+    "            self.update_weights()\n",
+    "\n",
+    "\n",
+    "    def update_weights(self):\n",
+    "\n",
+    "        # sigmoid function\n",
+    "        Y_hat = 1 / (1 + np.exp(-z))\n",
     "        \n",
     "\n",
     "\n",
-    "    def update_weights(self, ):\n",
+    "        for i in range(m):\n",
+    "                z_new = self.w*self.x + self.b\n",
+    "                z += z_new\n",
+    "            z = z + self.b\n",
     "\n",
-    "    def predict(self, ):"
+    "    def predict(self):"
    ]
   }
  ],
