--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -61,14 +61,12 @@
     "    def update_weights(self):\n",
     "\n",
     "        # sigmoid function\n",
+    "        z = self.X.dot(self.w) + self.b\n",
     "        Y_hat = 1 / (1 + np.exp(-z))\n",
-    "        \n",
+    "\n",
+    "         \n",
     "\n",
     "\n",
-    "        for i in range(m):\n",
-    "                z_new = self.w*self.x + self.b\n",
-    "                z += z_new\n",
-    "            z = z + self.b\n",
     "\n",
     "    def predict(self):"
    ]
