--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -64,6 +64,9 @@
     "        z = self.X.dot(self.w) + self.b\n",
     "        Y_hat = 1 / (1 + np.exp(-z))\n",
     "\n",
+    "        # derivatives\n",
+    "        dw = ()\n",
+    "\n",
     "         \n",
     "\n",
     "\n",
