--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -65,13 +65,20 @@
     "        Y_hat = 1 / (1 + np.exp(-z))\n",
     "\n",
     "        # derivatives\n",
-    "        dw = ()\n",
+    "        dw = (1/self.m)*np.dot(self.X.T, (Y_hat - self.Y))\n",
+    "        db = (1/self.m)*np.sum(Y_hat - self.Y)\n",
     "\n",
-    "         \n",
+    "        # updating the weights and bias using gradient descent equation\n",
+    "        self.w = self.w - (self.learning_rate * dw)\n",
+    "        self.b = self.b - (self.learning_rate * db)\n",
     "\n",
+    "    # sigmoid equation and decision boundary (set as 0.5)\n",
+    "    def predict(self, X):\n",
     "\n",
-    "\n",
-    "    def predict(self):"
+    "        z_pred = self.X.dot(self.w) + self.b\n",
+    "        Y_pred = 1 / (1 + np.exp(-z_pred))\n",
+    "        Y_pred = np.where( Y_pred > 0.5, 1, 0)\n",
+    "        return Y_pred"
    ]
   }
  ],
