--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -54,9 +54,8 @@
     "        self.Y = Y\n",
     "\n",
     "        # implementing gradient descent for optimisation\n",
-    "        for i in range(no_of_iterations):\n",
+    "        for i in range(self.no_of_iterations):\n",
     "            self.update_weights()\n",
-    "\n",
     "\n",
     "    def update_weights(self):\n",
     "\n",
@@ -75,7 +74,7 @@
     "    # sigmoid equation and decision boundary (set as 0.5)\n",
     "    def predict(self, X):\n",
     "\n",
-    "        z_pred = self.X.dot(self.w) + self.b\n",
+    "        z_pred = X.dot(self.w) + self.b\n",
     "        Y_pred = 1 / (1 + np.exp(-z_pred))\n",
     "        Y_pred = np.where( Y_pred > 0.5, 1, 0)\n",
     "        return Y_pred"
@@ -83,17 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# importing the dependencies\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
   },
   {
    "cell_type": "code",
