--- a/Document Parser/Document Parser.ipynb
+++ b/Document Parser/Document Parser.ipynb
@@ -119,16 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import os\n",
-    "\n",
-    "# api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "# print(\"API key found!\" if api_key else \"API key NOT found!\")\n",
-    "\n",
-    "# for testing\n",
-    "\n",
-    "\n",
-    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(\"API key found!\" if api_key else \"API key NOT found!\")"
+    "# dsdsdsdsdsd"
    ]
   },
   {
