--- a/Document Parser/Document Parser.ipynb
+++ b/Document Parser/Document Parser.ipynb
@@ -99,14 +99,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad2395b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b0adb150",
    "metadata": {},
    "outputs": [],
@@ -118,9 +110,7 @@
    "id": "71e65a17",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# dsdsdsdsdsd"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -141,6 +131,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import os\n",
+    "\n",
+    "# api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "# print(\"API key found!\" if api_key else \"API key NOT found!\")\n",
+    "\n",
+    "# for testing\n",
+    "\n",
     "client = OpenAI(\n",
     "  api_key=api_key\n",
     ")\n",
